[add] route変更とリンク追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html
     header
       nav.navbar.navbar-expand-lg.navbar-light
         .nav-left
-          a.navbar-brand href="#"
+          a.navbar-brand href="/"
             = image_tag 'logo.png'
             || Instagram
         .nav-center
