--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,3 +1,7 @@
 .home
   h1 Home#top
-  p Find me in app/views/home/top.html.slim
+  .container
+    - @users.each do |user|
+      .user-item
+        .user-right
+          = user.name
