--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,4 +1,4 @@
-.body
+.sign-up-body
   .sign-up-container
     .form-heading
       .heading-logo
@@ -16,4 +16,4 @@
     .log-in-header
       p アカウントをお持ちですか？
     .log-in-link
-      a href="#"　ログインする
+      a href="login"ログインする
