[add] ログイン画面作成、サインアップとログインできるように、成功時のみflash,test一旦完成

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,5 +27,7 @@ html
               i.fa.fa-heart-o aria-hidden="true"
             a.nav-item.nav-link href="#"
               i.fa.fa-user-o aria-hidden="true"
-
+    - if flash[:notice]
+      .flash
+        = flash[:notice]
     = yield
