[add_fix]ログアウト機能追加、ログインエラー時のrouteエラー対処のためファイル名、アクション名の変更

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -4,3 +4,7 @@
       .user-item
         .user-right
           = user.name
+          span ....email....
+          = user.email
+          span ....pass.....
+          = user.password
