--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,6 +27,13 @@ html
               i.fa.fa-heart-o aria-hidden="true"
             a.nav-item.nav-link href="#"
               i.fa.fa-user-o aria-hidden="true"
+            a.nav-item.nav-link href="/login"
+              i.fa.fa-sign-in aria-hidden="true"
+            =link_to("users/logout",{method: :post})
+              .nav-item.nav-link
+                i.fa.fa-sign-out aria-hidden="true"
+            a.nav-item.nav-link href="/signup"
+              i.fa.fa-address-card-o aria-hidden="true"
     - if flash[:notice]
       .flash
         = flash[:notice]
