--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -65,6 +65,26 @@ header {
 .home {
   background-color: #fafafa;
   padding-top: 70px;
+  .new-post-form{
+    background-color: white;
+    width: 70%;
+    .form-body{
+      textarea {
+        font-size: 20px;
+        padding: 10px;
+        min-height: 140px;
+        border: 1px solid #CCCCCC;
+        resize: none;
+      }
+      input {
+        width: 50%;
+        margin-bottom: 10px;
+        margin-left: 50px;
+        background-color: dodgerblue;
+        color: white;
+      }
+    }
+  }
   .user-item{
     padding: 20px 30px;
     background-color: white;
