--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -7,10 +7,10 @@
         p 友達の動画や写真をチェックしよう
     .form-body
       = form_tag(signup_path) do
-        input placeholder="携帯電話またはメールアドレス" name="email" value="#{@user.email}" type="text"
+        input placeholder="メールアドレス" name="email" value="#{@user.email}" type="text"
         input placeholder="フルネーム" name="full_name" value="#{@user.full_name}" type="text"
         input placeholder="ユーザーネーム" name="name" value="#{@user.name}" type="text"
-        input placeholder="パスワード" name="password" value="#{@user.password}" type="password"
+        input placeholder="パスワード" name="password" type="password"
         .form-submit
           input type="submit" value="登録する"
 
