--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -6,6 +6,12 @@
       .heading-message
         p 友達の動画や写真をチェックしよう
     .form-body
+      - if @user.errors.any?
+        .form-error
+          ul
+            - @user.errors.full_messages.each do |msg|
+              li= msg
+
       = form_tag(signup_path) do
         input placeholder="メールアドレス" name="email" value="#{@user.email}" type="text"
         input placeholder="フルネーム" name="full_name" value="#{@user.full_name}" type="text"
