[fix] インデント空欄修正、homeをroot_pathに、link_toの追加

--- a/app/views/users/login_form.html.slim
+++ b/app/views/users/login_form.html.slim
@@ -17,4 +17,5 @@
     .sign-in-header
       p アカウントをお持ちでないですか？
     .sign-in-link
-      a href="signup"登録する
+      = link_to  signup_path do
+        span 登録する
