--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -23,4 +23,5 @@
     .log-in-header
       p アカウントをお持ちですか？
     .log-in-link
-      a href="login"ログインする
+      = link_to login_path do
+        span ログインする
