--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,13 +27,15 @@ html
               i.fa.fa-heart-o aria-hidden="true"
             a.nav-item.nav-link href="#"
               i.fa.fa-user-o aria-hidden="true"
-            a.nav-item.nav-link href="/login"
-              i.fa.fa-sign-in aria-hidden="true"
+            = link_to login_path do
+              .nav-item.nav-link
+                i.fa.fa-sign-in aria-hidden="true"
             = link_to logout_path, method: :post do
               .nav-item.nav-link
                 i.fa.fa-sign-out aria-hidden="true"
-            a.nav-item.nav-link href="/signup"
-              i.fa.fa-address-card-o aria-hidden="true"
+            = link_to signup_path do
+              .nav-item.nav-link
+                i.fa.fa-address-card-o aria-hidden="true"
     - flash.each do |notice, value|
       .flash
         = content_tag(:div, value, class: notice)
