[add] userテーブルのemailにindex追加

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -3,7 +3,7 @@
     - @users.each do |user|
       .user-item
         .user-right
-          = user.name
+          = user.user_name
           span ....email....
           = user.email
           span ....pass.....
