--- a/app/views/session/login_form.html.slim
+++ b/app/views/session/login_form.html.slim
@@ -9,7 +9,7 @@
         .form-error
           = @error_message
       = form_tag(login_url) do
-        input placeholder="携帯電話またはメールアドレス" name="email" value="#{@email}"
+        input placeholder="メールアドレス" name="email" value="#{@email}"
         input placeholder="パスワード" name="password" value="#{@password}" type="password"
         .form-submit
           input type="submit" value="ログイン"
