--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -15,7 +15,7 @@
       = form_for(@user, url: signup_path) do |f|
         =f.email_field :email, placeholder: "メールアドレス"
         =f.text_field :full_name, placeholder: "フルネーム"
-        =f.text_field :name, placeholder: "ユーザーネーム"
+        =f.text_field :user_name, placeholder: "ユーザーネーム"
         =f.password_field :password ,placeholder: "パスワード"
         =f.submit "登録する",class: "form-submit"
 
