--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -17,6 +17,7 @@
         =f.text_field :full_name, placeholder: "フルネーム"
         =f.text_field :user_name, placeholder: "ユーザーネーム"
         =f.password_field :password ,placeholder: "パスワード"
+        =f.password_field :password_confirmation ,placeholder: "パスワード再入力"
         =f.submit "登録する",class: "form-submit"
 
   .log-in-container
