--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,18 +21,19 @@ html
             input.form-control.search-form.font-awesome aria-label="Search" placeholder="検索" type="search" /
         .nav-right
           .navbar-nav
-            a.nav-item.nav-link.active href="#"
-              i.fa.fa-compass aria-hidden="true" title="recommend"
-            a.nav-item.nav-link href="#"
-              i.fa.fa-heart-o aria-hidden="true" title="notification"
-            a.nav-item.nav-link href="#"
-              i.fa.fa-user-o aria-hidden="true" title="my page"
+            -if current_user
+              a.nav-item.nav-link.active href="#"
+                i.fa.fa-compass aria-hidden="true" title="recommend"
+              a.nav-item.nav-link href="#"
+                i.fa.fa-heart-o aria-hidden="true" title="notification"
+              a.nav-item.nav-link href="#"
+                i.fa.fa-user-o aria-hidden="true" title="my page"
+              = link_to logout_path, method: :post do
+                .nav-item.nav-link
+                  i.fa.fa-sign-out aria-hidden="true" title="logout"
             = link_to login_path do
               .nav-item.nav-link
                 i.fa.fa-sign-in aria-hidden="true" title="log in"
-            = link_to logout_path, method: :post do
-              .nav-item.nav-link
-                i.fa.fa-sign-out aria-hidden="true" title="logout"
             = link_to signup_path do
               .nav-item.nav-link
                 i.fa.fa-address-card-o aria-hidden="true" title="sign up"
