--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,37 +1,24 @@
 .home
-  .container
-
-    .new-post-form
-      .form-body
-        p 新規作成
-        / - @post.errors.full_messages.each do |message|
-        /   .form-error
-        /     = message
-
-        = form_for(@post, url: post_path) do |f|
-
+  .new-post-form
+    .form-body
+      p 新規作成
+      / - @post.errors.full_messages.each do |message|
+      /   .form-error
+      /     = message
+      = form_for(@post, url: post_path) do |f|
+        = f.fields_for :images,@post.images.build do |a|
+          = a.label :image
+          = a.file_field :image_file
           = f.text_area :message, class: "textarea", placeholder: "メッセージ"
-          = f.fields_for :images,@post.images.build do |a|
-            / = image_tag(f.object.content)
-            =a.label :image
-            = a.file_field :image_file
           = f.submit "投稿する", class: "submit"
 
-    - @users.each do |user|
-      .user-item
-        .user-right
-          = user.user_name
-          span ....email....
-          = user.email
-          span ....pass.....
-          = user.password
-    - @posts.each do |post|
-      .posts-index-item
-        span user_id...
-        = post.user_id
-        span ...message...
-        = post.message
-    - @images.each do |image|
-      .image-item
-        =image.post_id
-        =image_tag image.image_file
+  - @users.each do |user|
+    - user.posts.each do |post|
+      - post.images.each do |image|
+        .post-container
+          .post-user-name
+            = user.user_name
+          .post-image
+            = image_tag image.image_file , size: '550x550'
+          .post-message
+            = post.message
