--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,16 +1,17 @@
 .home
-  .new-post-form
-    .form-body
-      p 新規作成
-      / - @post.errors.full_messages.each do |message|
-      /   .form-error
-      /     = message
-      = form_for(@post, url: post_path) do |f|
-        = f.fields_for :images,@post.images.build do |a|
-          = a.label :image
-          = a.file_field :image_file
-          = f.text_area :message, class: "textarea", placeholder: "メッセージ"
-          = f.submit "投稿する", class: "submit"
+  - if logged_in?
+    .new-post-form
+      .form-body
+        p 新規作成
+        - @post.errors.full_messages.each do |message|
+          .form-error
+            = message
+        = form_for(@post, url: post_path) do |f|
+          = f.fields_for :images,@post.images.build do |a|
+            = a.label :image
+            = a.file_field :image_file
+            = f.text_area :message, class: "textarea", placeholder: "メッセージ"
+            = f.submit "投稿する", class: "submit"
 
   - @users.each do |user|
     - user.posts.each do |post|
