--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,6 +7,7 @@
   background-color: #fafafa;
   padding-top: 50px;
   padding-bottom: 80px;
+
   .sign-up-container {
     width: 450px;
     background-color: white;
@@ -22,12 +23,14 @@
         padding-top: 10px;
       }
     }
+
     .form-body {
-      .form-error{
+      .form-error {
         color: darkred;
         font-size: 14px;
         padding-left: 35px;
       }
+
       input {
         width: 80%;
         margin-bottom: 10px;
@@ -39,6 +42,7 @@
         color: #999999;
         font-size: 14px;
       }
+
       .form-submit {
         width: 80%;
         margin-bottom: 40px;
@@ -50,7 +54,8 @@
 
 
   }
-  .log-in-container{
+
+  .log-in-container {
     width: 450px;
     height: 90px;
     background-color: white;
@@ -69,6 +74,7 @@
   background-color: #fafafa;
   padding-top: 50px;
   padding-bottom: 80px;
+
   .log-in-container {
     width: 450px;
     background-color: white;
@@ -86,12 +92,13 @@
     }
 
     .form-body {
-      .form-error{
+      .form-error {
         color: darkred;
         font-size: 14px;
         padding-left: 55px;
         padding-bottom: 10px;
       }
+
       input {
         width: 80%;
         margin-bottom: 25px;
@@ -115,7 +122,8 @@
       }
     }
   }
-  .sign-in-container{
+
+  .sign-in-container {
     width: 450px;
     height: 90px;
     background-color: white;
@@ -125,5 +133,81 @@
     border: 1px solid #CCCCCC;
     text-align: center;
     padding-top: 10px;
+  }
+}
+
+//show
+body {
+  background-color: red;
+  width: 100%;
+  padding-bottom: 50px;
+  .show-container {
+    background-color: white;
+    height: 300px;
+    width: 100%;
+    padding-left: 50px;
+    margin-top: 50px;
+
+    .user-container {
+      height: 300px;
+      width: 810px;
+      margin-left: auto;
+      margin-right: auto;
+
+      .user-icon {
+        display: inline-block;
+        width: 200px;
+        height: 200px;
+        vertical-align: top;
+      }
+
+      .user-information {
+        display: inline-block;
+        width: 500px;
+        height: 250px;
+        margin-left: 50px;
+        vertical-align: top;
+
+        .user-name {
+          display: inline-block;
+          font-size: 24px;
+          padding: 20px 0;
+        }
+
+        .user-detail {
+          display: inline-block;
+          padding: 15px 0;
+
+          .user-detail-left {
+            width: 120px;
+            display: inline-block;
+          }
+
+          .user-detail-center {
+            width: 180px;
+            display: inline-block;
+          }
+
+          .user-detail-right {
+            width: 160px;
+            display: inline-block;
+          }
+        }
+      }
+    }
+
+    .user-image-container {
+      background-color: white;
+      height: 300px;
+      width: 810px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 30px;
+
+      .image-item {
+        margin-right: 20px;
+        margin-bottom: 20px;
+      }
+    }
   }
 }
