[add] Databasecleanerを追加、session_helperの定義を各controllerに移動、uploaderをgitignoreに追加

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -155,6 +155,9 @@ header {
     .post-user-name {
       height: 50px;
       padding: 10px 20px;
+      a:hover {
+        text-decoration: none;
+      }
     }
 
     .post-image {
