--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -2,11 +2,17 @@
   .user-container
     .user-icon
       .user-image
-        span ◯
+        = image_tag "/uploads/image/image_file/1/_2019-10-27_13.01.25.png", size: '150x150', class: "image-icon"
     .user-information
       .user-name
         = @user.user_name
-      .user-follow
+      - if @user == current_user
+        .user-profile
+          = link_to user_profile_path(current_user.id) do
+            span プロフィールを編集
+      - else
+        .user-follow
+          span current_userではない
       .user-detail
         .user-detail-left
           span 投稿  1000件
