--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -269,10 +269,67 @@
     vertical-align: top;
     border: 1px solid #CCC;
 
-    .edit-form {
-      label {
-        display: block;
+    .edit-form-container {
+      .edit-label {
+        display: inline-block;
+        width: 200px;
+        text-align: right;
+        vertical-align: top;
+        padding-top: 12px;
+        padding-right: 20px;
 
+        .label-email {
+          height: 135px;
+          padding-top: 70px;
+        }
+      }
+
+      .edit-form {
+        display: inline-block;
+        width: 320px;
+        vertical-align: top;
+
+        input {
+          display: block;
+          margin-top: 10px;
+          width: 300px;
+        }
+        p{
+          color: #999999;
+          font-size: 14px;
+        }
+
+        textarea {
+          margin-top: 10px;
+          margin-bottom: 10px;
+          width: 300px;
+        }
+
+        button {
+          height: 30px;
+          margin-top: 10px;
+          border-radius: 5px;
+          background-color: dodgerblue;
+          border: none;
+          color: white;
+          padding: 0 10px;
+        }
+
+        .gender-form {
+          input {
+            margin-top: 15px;
+            width: 20px;
+            display: inline-block;
+            margin-left: 10px;
+          }
+        }
+
+        .submit-form {
+          button {
+            margin-top: 30px;
+            padding: 0 30px;
+          }
+        }
       }
     }
   }
