--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -16,7 +16,29 @@
       li.nav-item
         a.nav-link href="#"  ログインアクティビティ
   .edit-contents
-    .edit-form
-      / = form_for(@user, url: , html: {method: :get, class: 'form-horizontal', role: 'form'}) do |f|
-      /   = f.text_field :code, class: 'form-control'
-      /   = f.text_field :name, class: 'form-control'
+    .edit-form-container
+      .edit-label
+        p 名前
+        p ユーザーネーム
+        p ウェブサイト
+        p 自己紹介
+        p.label-email メールアドレス
+        p 電話番号
+        p 性別
+
+      .edit-form
+        / =@user.user_name
+        form_for(@user, url: user_update_path) do |f|
+        input
+        input
+        input
+        textarea
+        p 非公開情報
+        input
+        button メールアドレスを認証
+        input
+        .gender-form
+          input type="radio" name="gender" 男性
+          input type="radio" name="gender" 女性
+        .submit-form
+          button 送信する
