--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -28,7 +28,7 @@
 
       .edit-form
         / =@user.user_name
-        form_for(@user, url: user_update_path) do |f|
+        / form_for(@user, url: user_update_path) do |f|
         input
         input
         input
