--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -195,7 +195,12 @@
 
       .user-follow {
         display: inline-block;
-        background-color: #13a2b0;
+
+        button {
+          background-color: #fafafa;
+          padding: 2px 15px;
+          border-radius: 5px;
+        }
       }
 
       .user-detail {
@@ -242,7 +247,7 @@
 
   .edit-menu {
     width: 250px;
-    height: 500px;
+    height: 550px;
     background-color: white;
     display: inline-block;
     border: 1px solid #CCC;
@@ -264,13 +269,36 @@
   .edit-contents {
     background-color: white;
     width: 600px;
-    height: 500px;
+    height: 550px;
     display: inline-block;
     vertical-align: top;
     border: 1px solid #CCC;
+    .form-error {
+      color: darkred;
+      font-size: 14px;
+      padding-left: 35px;
+    }
+
 
     .edit-form-container {
+      //.button {
+      //  margin-top: 30px;
+      //  width: 180px;
+      //}
       .edit-label {
+        .edit-image-container{
+          display: inline-block;
+          height: 110px;
+          width: 200px;
+          //background-color: #aaaaaa;
+          vertical-align: top;
+            padding-top: 30px;
+            padding-right: 20px;
+
+            .image-item {
+              border-radius: 25px;
+            }
+        }
         display: inline-block;
         width: 200px;
         text-align: right;
@@ -279,8 +307,12 @@
         padding-right: 20px;
 
         .label-email {
-          height: 135px;
-          padding-top: 70px;
+          height: 115px;
+          padding-top: 40px;
+        }
+        .label-gender{
+          height: 50px;
+          padding-top: 20px;
         }
       }
 
@@ -289,14 +321,19 @@
         width: 320px;
         vertical-align: top;
 
+        .image-button{
+          width: 180px;
+        }
         input {
           display: block;
           margin-top: 10px;
           width: 300px;
         }
-        p{
+
+        p {
           color: #999999;
           font-size: 14px;
+          padding-top: 10px;
         }
 
         textarea {
@@ -305,7 +342,7 @@
           width: 300px;
         }
 
-        button {
+        button,.button {
           height: 30px;
           margin-top: 10px;
           border-radius: 5px;
@@ -316,8 +353,8 @@
         }
 
         .gender-form {
+          display: inline-block;
           input {
-            margin-top: 15px;
             width: 20px;
             display: inline-block;
             margin-left: 10px;
@@ -325,9 +362,9 @@
         }
 
         .submit-form {
-          button {
+          .button {
             margin-top: 30px;
-            padding: 0 30px;
+            width: 180px;
           }
         }
       }
