--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -23,14 +23,9 @@
     .edit-form-container
       .edit-label
         .edit-image-container
-          / @user.profile.image_file
-            "/uploads/image/image_file/1/_2019-10-27_13.01.25.png"
-          / = image_tag @user.profile.image_file  , size: '50x50', class: "image-item"
-          / - @users.each do |user|
-          - if user.profile.image_file
-            = image_tag user.profile.image_file
-            / - else
-            /   = image_tag "wanko.png"
+
+          - if @user.profile.image_file
+            = image_tag @user.profile.image_file, size: '50x50', class: "image-item"
         p 名前
         p ユーザーネーム
         p.label-email メールアドレス
@@ -39,9 +34,10 @@
 
       .edit-form
         = form_for(@user, url: profile_path, html: {method: "patch"}) do |i|
-          = i.label :image_file, "プロフィール画像の変更", class: "input-btn"
-          = i.file_field :image_file, class: "image_form"
-          = i.submit "変更する" ,class: "image-button button"
+          = i.fields_for :profile do |prf|
+            = prf.label :image_file, "プロフィール画像の変更", class: "input-btn"
+            = prf.file_field :image_file, class: "image_form"
+          = i.submit "変更する", class: "image-button button"
         = form_for(@user, url: profile_path(id: current_user.id), html: {method: "patch"}) do |f|
           = f.text_field :full_name
           = f.text_field :user_name
