[add] いいね機能の実装

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -196,3 +196,9 @@ header {
   border-radius: 0 0 2px 2px;
   font-size: 14px;
 }
+.like_button{
+  color: gray;
+  font-size: 14px;
+  display: inline-block;
+  font-weight: bold;
+}
