--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -9,7 +9,7 @@
         = form_for(@post, url: posts_path(id: current_user.id)) do |f|
           = f.fields_for :images,@post.images.build do |a|
             = a.label :image_file, "画像をアップロード", class: "input-btn"
-            = a.file_field :image_file, class: "image-form"
+            = a.file_field :image_file,accept: 'image/jpg,image/jpeg,image/png,image/gif', class: "image-form"
             = f.text_area :message, class: "textarea", placeholder: "メッセージ"
             = f.submit "投稿する", class: "submit"
     .user-container
