[add] いいね機能のテスト一旦完成

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -196,7 +196,13 @@ header {
   border-radius: 0 0 2px 2px;
   font-size: 14px;
 }
-.like_button{
+.like-btn{
+  color: darkred;
+  font-size: 14px;
+  display: inline-block;
+  font-weight: bold;
+}
+.unlike-btn{
   color: gray;
   font-size: 14px;
   display: inline-block;
