--- a/app/views/likes/_like.html.slim
+++ b/app/views/likes/_like.html.slim
@@ -2,8 +2,8 @@
   - if current_user.likes.find_by(post_id: post.id)
     = link_to unlike_path(post.id), method: :delete, remote: true do
       .like_button
-        | ❤️#{post.likes.count}
+        span.fa.fa-heart.like-btn #{post.likes.count}
   - else
     = link_to like_path(post.id), method: :post, remote: true do
       .like_button
-        | ♡️#{post.likes.count}
+        span.fa.fa-heart.unlike-btn #{post.likes.count}
