--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -29,6 +29,7 @@
         color: darkred;
         font-size: 14px;
         padding-left: 35px;
+        background-color: #c1ced7;
       }
 
       input {
